--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -22,6 +22,9 @@
             width: 18px;
             border-radius: 50%;
         }
+        .cisco-audit-section-row {
+            background-color: #EEE;
+        }
         </style>
     {% endblock %}
     {% block javascripts %}
