--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -95,15 +95,15 @@
             </div>
         </form>
 
-        <table class="table table-condensed">
+        <table class="table table-condensed cisco-audit-table">
             <caption>List of fields contained in this section</caption>
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>description</th>
-                    <th>Weight</th>
-                    <th>Fatal</th>
-                    <th></th>
+                    <th width=20%>Title</th>
+                    <th width=65%></th>
+                    <th width=5%>Weight</th>
+                    <th width=5%>Fatal</th>
+                    <th width=5%></th>                    
                 </tr>
             </thead>
             <tbody>
@@ -111,7 +111,7 @@
                 {% include 'CiscoSystemsAuditBundle:AuditFormField:_load.html.twig' %}
             {% else %}
                 <tr>
-                    <td class="5">
+                    <td colspan="5">
                         <div class="alert alert-error">
                             <button type="button" class="close" data-dismiss="alert">×</button>
                             <h4>Warning!</h4>
