--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -14,11 +14,12 @@
             <caption>List of existing fields</caption>
             <thead>
                 <tr>
-                    <th>Title</th>
-                    <th>Section</th>
-                    <th>Weight</th>
-                    <th>Fatal</th>
-                    <th></th>
+                    <th width=20%>Title</th>
+                    <th width=35%></th>
+                    <th width=30%>Section</th>
+                    <th width=5%>Weight</th>
+                    <th width=5%>Fatal</th>
+                    <th width=5%></th>                         
                 </tr>
             </thead>
             <tbody>
@@ -26,7 +27,7 @@
                     {% include 'CiscoSystemsAuditBundle:AuditFormField:_view.html.twig' %}
                 {% else %}
                     <tr>
-                        <td colspan="4">
+                        <td colspan="5">
                             <div class="alert alert-error">
                                 <button type="button" class="close" data-dismiss="alert">×</button>
                                 <h4>Warning!</h4>
@@ -38,9 +39,5 @@
             </tbody>
         </table>
     </div>
-</div>
-<script type="text/javascript">
-
-    </script>
-    
+</div>    
 {% endblock %}
