NOT WORKING - changed reference to an interface (in progress)

--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -9,6 +9,12 @@
                     <i class="icon-ok"></i> Save
                 </button>
             </legend>
+
+            <div class="form-inline">
+                <label class="control-label">Reference: </label>
+                {#{ form_row( form.auditReference ) }#}
+            </div>
+
             <table class="table table-condensed table-hover">
                 <thead>
                     <tr>
