--- a/Resources/views/AuditFormSection/_load.html.twig
+++ b/Resources/views/AuditFormSection/_load.html.twig
@@ -16,7 +16,7 @@
                 <i class="icon-eye-open"></i> View
             </a>
                 <noscript>
-                    <a class="btn btn-mini"
+                    <a class="btn btn-mini cisco-audit-field-edit" toggle-value="true"
                         href="{{ path( 'cisco_auditformsection_edit', { 'id': section.id } ) }}">
                         <i class="icon-wrench"></i> Edit
                     </a>
