cosmetic changes to naming

--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block body %}
+{% block pagecontent %}
 {{ parent() }}
 <div class="container">
     <div class="span10 offset1">
