--- a/Resources/views/AuditFormSection/_load.html.twig
+++ b/Resources/views/AuditFormSection/_load.html.twig
@@ -1,4 +1,4 @@
-{% block body %}
+{% block pagecontent %}
 <tr class="cisco-audit-section-row">
     <td colspan="4">
         <strong>Section {{ section.id }}: {{ section.title }}</strong> 
