--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block body %}
+{% block pagecontent %}
 <div class="container">
     <div class="span10 offset1">
         <form class="form-horizontal" method="POST" action="">
