--- a/Resources/views/AuditForm/index.html.twig
+++ b/Resources/views/AuditForm/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block body %}
+{% block pagecontent %}
 <div class="container">
     <div class="span6 offset1">
         <legend>Forms
