--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -1,4 +1,4 @@
-{% block body %}
+{% block pagecontent %}
 <tr class="cisco-audit-field-row">
     <td colspan="2">{{ field.title }}</td>
     <td>{{ field.weight }}</td>
