--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block body %}
+{% block pagecontent %}
 <div class="container">
     <div class="span8 offset2">
         <legend>
