--- a/Resources/views/AuditFormSection/_edit.html.twig
+++ b/Resources/views/AuditFormSection/_edit.html.twig
@@ -1,4 +1,4 @@
-{% block body %}
+{% block pagecontent %}
 <form class="form-horizontal" method="POST" action="">
     <div class="controls controls-row">
         <div class="control-group">
