--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'CiscoSystemsAuditBundle::base.html.twig' %}
 
-{% block body %}
+{% block pagecontent %}
 <div class="container">
     <div class="span10 offset1">
         <legend>Section: {{ section.title }}
