fixed one more bi-directional mapping, and added usage of audit form type to controller/template

--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -12,7 +12,7 @@
 
             <div class="form-inline">
                 <label class="control-label">Reference: </label>
-                {#{ form_row( form.auditReference ) }#}
+                {{ form_row( form.auditReference ) }}
             </div>
 
             <table class="table table-condensed table-hover">
