js: form edit manipulation for viewing section/fields

--- a/Resources/views/AuditFormField/_view.html.twig
+++ b/Resources/views/AuditFormField/_view.html.twig
@@ -18,8 +18,8 @@
     </td>
     <td>
         <div class="btn-group pull-right">
-            <a class="btn btn-mini cisco-audit-field-view" title="View">
-                <i class="icon-eye-open"></i>
+            <a class="btn btn-mini cisco-audit-field-view">
+                <i class="icon-eye-open" title="View"></i>
             </a>
             <a class="btn btn-mini cisco-audit-field-view" data-field-id="{{ field.id }}"
                 href="{{ path( 'cisco_auditformfield_edit', { 'id': field.id } ) }}"
