WIP: ajax add field to section (cont)

--- a/Resources/views/AuditFormSection/_load.html.twig
+++ b/Resources/views/AuditFormSection/_load.html.twig
@@ -10,8 +10,7 @@
     </td>
     <td>
         <div class="btn-group">
-            <a class="btn btn-mini cisco-audit-section-view" 
-               {#href="{{ path( 'cisco_auditformsection_view', { 'id': section.id } ) }}"#}>
+            <a class="btn btn-mini cisco-audit-section-view">
                 <i class="icon-eye-open"></i> View
             </a>
                 <noscript>
