changed routing, fixed some JS and controller logic

--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -10,8 +10,7 @@
                 </button>
             </legend>
 
-            <div class="form-inline">
-                {#<label class="control-label">Reference: </label>#}
+            <div class="form-inline row input">
                 {{ form_row( form.auditReference ) }}
             </div>
 
